[UPDATE] 자신이 금칙어가 포함된 메시지를 전송했을 때의 강조 표시
- 상대방이 금칙어가 포함된 메시지를 보냈을 때와 마찬가지로 나의 경우에도 메시지에서 금칙어를 강조 표시하도록 업데이트

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -114,6 +114,10 @@ div.chat_list > div.my_msg > p {
   word-break: break-all;
 }
 
+div.chat_list > div.my_msg > p > span {
+  color: var(--accent-color);
+}
+
 @media (max-width: 400px) {
   div.chat_list > div.other_msg > p,
   div.chat_list > div.my_msg > p {
