[UPDATE] 다크모드 버튼 기능 추가
- index.css 파일에 다크모드 전용 css 변수 설정(추후 세부 조정 필요)
- index.js 파일에 존재하는 메인 페이지 관련 코드 main.js 파일로 분리
- 브라우저가 페이지를 렌더링 하기 전에 다크모드를 적용시키기 위해서 index.js의 script 태그 선언 위치 변경(페이지 이동 시 배경색상 깜빡임 현상 방지)

--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -17,3 +17,4 @@ block content
       a(href="/room").box-shadow 시작하기
     footer.main_footer
       p @2024 wilddev_seok 
+  script(src="/js/main.js")  
