--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -3,12 +3,20 @@
   --primary-bg-color: #fff;
   --secondary-bg-color: #d2d2d270;
   --tertiary-bg-color: #2b2b2bdf;
-  --border-color: #d2d2d2;
   --primary-text-color: #2b2b2b;
   --secondary-text-color: #fff;
   --tertiary-text-color: #d2d2d243;
+  --layout-color: #e2e1e0;
+  --border-color: #d2d2d2;
   --info-color: #7c7c7c;
   --accent-color: #fd5252;
+}
+
+/* 다크 모드 */
+[data-theme="dark"] {
+  --primary-color: #ffa600;
+  --primary-bg-color: #2b2b2b;
+  --layout-color: #121212;
 }
 
 * {
@@ -22,7 +30,8 @@ body {
   height: 100dvh;
   color: var(--primary-text-color);
   justify-content: center;
-  background-color: #e2e1e0;
+  background-color: var(--layout-color);
+  transition: background-color 0.5s ease;
 }
 
 main#layout {
@@ -31,6 +40,7 @@ main#layout {
   background-color: var(--primary-bg-color);
   flex: 1 1 0%;
   flex-direction: column;
+  transition: background-color 0.5s ease;
 }
 
 input:focus {
