--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(charset="UTF-8")
-    meta(name="theme-color", content="#fff")
+    meta(name="theme-color", content="#fcfcfc")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="icon", href="/images/shushing_emoji.png")
     link(rel="stylesheet", href="/css/index.css")
