--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -13,7 +13,7 @@ header.room_header {
   height: 3rem;
   padding: 0.2rem 1rem;
   align-items: center;
-  box-shadow: 0 4px 4px -2px var(--secondary-bg-color);
+  border-bottom: 2px solid var(--border-color);
   user-select: none;
 }
 
