[ADD] 메시지 미리보기 추가
- 채팅 스크롤이 올라간 상태에서 상대방의 메시지를 수신 시 나타낼 요소 추가 (카카오톡 참고)
- 클릭 시에는 스크롤 최하단으로 이동하도록 기능 추가 예정

--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -11,7 +11,12 @@ block content
             span.timer 3:00
         div.chat_list        
             p.loading_msg 상대방을 기다리는 중입니다...                   
-        form.message_form            
+        form.message_form     
+            div.message_preview
+                label 상대
+                p 안녕하세요 안녕하세요
+                span
+                    i.fa-solid.fa-angle-down   
             span.scrolldown_button.box-shadow
                 i.fa-solid.fa-arrow-down   
             div.time_control
