--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -13,7 +13,7 @@ header.room_header {
   height: 3rem;
   padding: 0.2rem 1rem;
   align-items: center;
-  border-bottom: 2px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
   user-select: none;
 }
 
@@ -85,12 +85,12 @@ div.chat_list > div.other_msg {
 
 div.chat_list > div.other_msg > span {
   display: block;
-  font-weight: 600;
+  font-weight: 500;
   user-select: none;
 }
 
 div.chat_list > div.other_msg > p {
-  background-color: var(--tertiary-text-color);
+  background-color: var(--secondary-bg-color);
   margin-top: 0.5rem;
   max-width: 15rem;
   word-break: break-all;
@@ -137,6 +137,34 @@ form.message_form {
   padding: 0.8rem 1rem 1.2rem;
   flex-direction: column;
   box-shadow: 0 4px 4px 6px var(--secondary-bg-color);
+}
+
+form.message_form > div.message_preview {
+  display: flex;
+  position: absolute;
+  top: -3.5rem;
+  left: 50%;
+  width: calc(100% - 3rem);
+  padding: 0.7rem 1rem;
+  color: var(--primary-text-color);
+  border-radius: 1rem;
+  cursor: pointer;
+  transform: translateX(-50%);
+  background-color: var(--secondary-bg-color);
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+form.message_form > div.message_preview > label {
+  font-weight: 500;
+}
+
+form.message_form > div.message_preview > p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  flex: 1 1 0%;
 }
 
 form.message_form > span.scrolldown_button {
