[ADD] 대화방에 금칙어 맞추기 버튼 추가
- 단순히 대화를 통해서 상대방이 금칙어를 말하게끔 유도하는 것은 한계가 있다는 것을 테스트를 통해 알게 됨
- 이로 인한 게임의 루즈함을 타파하기 위해 자신의 금칙를 맞출 수 있도록 해주는 버튼을 추가 => 자신의 금칙어를 맞출 시 게임에서 승리

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -44,6 +44,7 @@ header.room_header > span.timer {
   position: absolute;
   top: 50%;
   right: 1rem;
+  font-weight: 500;
   transform: translateY(-50%);
 }
 
@@ -200,6 +201,25 @@ form.message_form > span.scrolldown_button {
 form.message_form > span.scrolldown_button.active {
   opacity: 1;
   visibility: visible;
+}
+
+form.message_form > span.guess_button {
+  display: flex;
+  position: absolute;
+  top: -4rem;
+  width: 3rem;
+  height: 3rem;
+  color: var(--primary-text-color);
+  font-size: 1.2rem;
+  background-color: var(--primary-bg-color);
+  cursor: pointer;
+  border-radius: 1.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+[data-theme="dark"] form.message_form > span.guess_button {
+  border: 1.5px solid var(--border-color);
 }
 
 form.message_form > div.time_control {
