--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -19,6 +19,8 @@ block content
                     i.fa-solid.fa-angle-down   
             span.scrolldown_button.box-shadow
                 i.fa-solid.fa-arrow-down   
+            span.guess_button.box-shadow 
+                i.fa-solid.fa-pen-to-square
             div.time_control
                 p 변경 기회: 
                     span.remain_chances 3  
