--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -19,7 +19,7 @@ block content
                     i.fa-solid.fa-angle-down   
             span.scrolldown_button.box-shadow
                 i.fa-solid.fa-arrow-down   
-            span.guess_button.box-shadow 
+            span.guess_button.box-shadow.active
                 i.fa-solid.fa-pen-to-square
             div.time_control
                 p 변경 기회: 
