--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -36,5 +36,6 @@ block content
         include partials/exitModal
         include partials/resultModal
         include partials/winLossModal
+        include partials/guessModal
     script(src="/socket.io/socket.io.js")
     script(src="/js/room.js")
