[UPDATE] --secondary-bg-color 색상 변경
- 해당 색사을 배경색으로 가진 요소가 다른 요소 위에 겹쳐서 있을 경우, 투명도 때문에 뒤에 있는 요소가 보이고 있음 => 시각적인 복잡도를 줄이기 위해 투명도가 100%인 동일한 색상으로 대치

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #ffa600;
   --primary-bg-color: #fcfcfc;
-  --secondary-bg-color: #d2d2d270;
+  --secondary-bg-color: #e8e8e8;
   --tertiary-bg-color: #2b2b2bdf;
   --primary-text-color: #2b2b2b;
   --secondary-text-color: #fcfcfc;
