[UPDATE] 금칙어 맞추기 버튼 클릭 시 모달창 띄우기

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -375,12 +375,14 @@ dialog.guess_modal > div.modal_container > form.guess_form {
   display: flex;
   width: 100%;
   flex-direction: column;
+  margin-top: 0.2rem;
 }
 
 dialog.guess_modal > div.modal_container > form.guess_form > input {
   padding: 0.8rem;
   border: none;
   color: var(--primary-text-color);
+  font-size: 1rem;
   flex: 1 1 0%;
   border-radius: 0.8rem;
   background-color: var(--secondary-bg-color);
