--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -367,7 +367,7 @@ dialog.winLoss_modal > div.modal_container > div.desc_container > p {
   color: var(--accent-color);
 }
 
-dialog.guess_modal > div.modal_container > h2 {
+dialog.guess_modal > div.modal_container > h3 {
   color: var(--primary-text-color);
 }
 
@@ -379,7 +379,7 @@ dialog.guess_modal > div.modal_container > form.guess_form {
 }
 
 dialog.guess_modal > div.modal_container > form.guess_form > input {
-  padding: 0.8rem;
+  padding: 0.6rem 0.8rem;
   border: none;
   color: var(--primary-text-color);
   font-size: 1rem;
@@ -395,7 +395,7 @@ dialog.guess_modal > div.modal_container > form.guess_form > p {
   font-size: 0.8rem;
   text-align: end;
   margin-top: 0.3rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.8rem;
 }
 
 dialog.exit_modal
