[ADD] 금칙어 맞추기 남은 기회 기능 추가
- 시간 변경 기능과 마찬가지로 무차별적인 금칙어 멎추기를 방지하기 위해 게임 중 3회만 금칙어 맞추기를 할 수 있도록 설정

--- a/src/views/partials/guessModal.pug
+++ b/src/views/partials/guessModal.pug
@@ -4,7 +4,7 @@ dialog.guess_modal
         form.guess_form
             input(type="text", placeholder="금칙어를 입력해주세요.", maxLength="12")
             p 남은 기회: 
-                span 3
+                span.guess_chances 3
             div.button_container
                 button(type="button").modal_exitBtn 닫기
                 button.modal_submitBtn 확인 
