--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -23,7 +23,7 @@ block content
                 i.fa-solid.fa-pen-to-square
             div.time_control
                 p 변경 기회: 
-                    span.remain_chances 3  
+                    span.time_chances 3  
                 div 
                     span.extend_button 
                         i.fa-solid.fa-plus  시간 연장
