[ADD] 메인 페이지 도움말 버튼 추가
- 클릭 시 게임 진행 방식에 대해서 간략하게 알 수 있는 모달창을 보여주는 버튼 추가

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -13,8 +13,7 @@ header.main_header {
 }
 
 header.main_header > span {
-  font-weight: 500;
-  font-size: 0.9rem;
+  cursor: pointer;
 }
 
 header.main_header > div.darkmode_button > input {
