--- a/src/views/main.pug
+++ b/src/views/main.pug
@@ -19,4 +19,5 @@ block content
     footer.main_footer
       p @2024 wilddev_seok 
       span beta
+  include partials/tipModal
   script(src="/js/main.js")  
