--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -61,6 +61,10 @@ input:focus {
   -moz-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+dialog:focus {
+  outline: none;
+}
+
 p#toast_msg {
   position: fixed;
   bottom: 2rem;
