[ADD] 게임 방법 모달창에 게임 방법 문구 추가
- 게임 방법 모달창에 대력적인 플레이 방법을 알 수 있는 문구들을 추가

--- a/src/views/partials/tipModal.pug
+++ b/src/views/partials/tipModal.pug
@@ -1,5 +1,22 @@
 dialog.tip_modal 
     div.modal_container 
         h2 게임 방법
+        div.desc_container
+            div.desc_content 
+                h3 1. 기본 규칙
+                ul 
+                    li 각 플레이어에게는 금칙어가 주어집니다. 
+                    li 주어진 대화 주제로 상대방과 대화하면서 상대방이 자신의 금칙어를 말하도록 유도해보세요.
+                    li 상대방이 자신의 금칙어를 말하면 게임에서 승리합니다.
+            div.desc_content
+                h3 2. 제한 시간
+                ul 
+                    li 기본적으로 3분의 제한 시간이 주어지며, 제한 시간이 종료되면 무승부로 처리됩니다.
+                    li 시간 조절 버튼을 이용해서 제한 시간을 연장하거나 단축시켜보세요.                             
+            div.desc_content 
+                h3 3. 금칙어 맞추기
+                ul 
+                    li 상대방과의 대화를 통해서 당신의 금칙어를 유추하였다면, 좌측 하단의 금칙어 맞추기 버튼을 클릭해서 예상되는 금칙어를 입력해보세요.
+                    li 입력한 금칙어가 당신의 금칙어가 맞다면 게임에서 승리하게 됩니다.                                     
         button.modal_exitBtn 닫기
             
