--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -92,6 +92,7 @@ dialog.tip_modal {
   dialog.tip_modal {
     width: 100%;
     height: 100%;
+    border-radius: 0;
   }
 }
 
@@ -100,10 +101,37 @@ dialog.tip_modal > div.modal_container {
   height: 100%;
   flex-direction: column;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 dialog.tip_modal > div.modal_container > h2 {
   color: var(--primary-text-color);
+}
+
+dialog.tip_modal > div.modal_container > div.desc_container {
+  display: flex;
+  padding: 1rem;
+  background-color: var(--secondary-bg-color);
+  border-radius: 1rem;
+  flex: 1 1 0%;
+  flex-direction: column;
+  gap: 1rem;
+  overflow: scroll;
+}
+
+dialog.tip_modal > div.modal_container > div.desc_container > div {
+  color: var(--primary-text-color);
+}
+
+dialog.tip_modal > div.modal_container > div.desc_container > div > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  margin-top: 0.5rem;
+}
+
+dialog.tip_modal > div.modal_container > div.desc_container > div > ul > li {
+  margin-left: 1.5rem;
 }
 
 dialog.tip_modal > div.modal_container > button {
