[UPDATE] 메인 페이지 디자인 변경
- 메인 페이지 이미지 변경
- 게임 방법 버튼을 아이콘 버튼에서 '게임 방법' 텍스트 버튼으로 변경
- 다크모드 버튼과 게임 방법 버튼 위치 변경
- 모바일 환경 가로모드 대비하여 전체 레이아웃에 최소 높이 설정

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -49,6 +49,7 @@ main#layout {
   flex: 1 1 0%;
   flex-direction: column;
   transition: background-color 0.5s ease;
+  min-height: 42rem;
 }
 
 input:focus {
