[UPDATE] 크롬 브라우저 자동 번역 기능 방지
- 크롬 브라우저 접속 시 나타나는 자동 번역 팝업이 나타나지 않게 하기 위해서 meta 태그 추가

--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -4,7 +4,7 @@ block content
     div#room_container
         header.room_header 
             span.exit_button 
-                i.fa-solid.fa-chevron-left
+                i.fa-solid.fa-arrow-left
             div.word_container 
                 p 상대방의 금칙어
                 span.forbidden_word
@@ -14,7 +14,7 @@ block content
         form.message_form     
             div.message_preview
                 label 상대
-                p 
+                p
                 span
                     i.fa-solid.fa-angle-down   
             span.scrolldown_button.box-shadow
