[UPDATE] 시간 변경 기회 표시 방식 변경
- 기존의 표시 방식은 시간 변경 버튼들과 동떨어져 있다보니 시간 변경 기능과 관련짓기 힘든 점이 있었음

- 좀 더 직관적이게끔 메시지 입력창 좌상단에 표시하는 대신 시간 변경 시 나에게 나타나는 메시지에 함께 표시되는 방식으로 변경

- 기존 자리에는 금칙어 맞추기 버튼이 들어갈 예정

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -231,19 +231,11 @@ form.message_form > span.guess_button.active {
 }
 
 form.message_form > div.time_control {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   user-select: none;
+  text-align: end;
 }
 
-form.message_form > div.time_control > p {
-  font-weight: 500;
-  font-size: 0.8rem;
-  margin-left: 0.5rem;
-}
-
-form.message_form > div.time_control > div > span {
+form.message_form > div.time_control > span {
   padding: 0.3rem 0.5rem;
   color: var(--info-color);
   font-size: 0.8rem;
