--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -49,7 +49,7 @@ header.room_header > span.timer {
 }
 
 div.chat_list {
-  padding: 0 1.5rem 3.8rem 1.5rem;
+  padding: 0 1.5rem 1.5rem 1.5rem;
   flex: 1 1 0%;
   overflow-y: scroll;
   -ms-overflow-style: none; /* IE and Edge */
@@ -66,7 +66,7 @@ p.loading_msg {
   font-weight: 400;
   font-size: 0.9rem;
   text-align: center;
-  margin-top: 0.9rem;
+  margin-top: 0.8rem;
 }
 
 div.chat_list > p.notice > span {
@@ -81,7 +81,7 @@ div.my_msg > p {
 }
 
 div.chat_list > div.other_msg {
-  margin-top: 0.9rem;
+  margin-top: 0.8rem;
 }
 
 div.chat_list > div.other_msg > span {
@@ -103,7 +103,7 @@ div.chat_list > div.other_msg > p > span {
 
 div.chat_list > div.my_msg {
   text-align: end;
-  margin-top: 0.9rem;
+  margin-top: 0.8rem;
 }
 
 div.chat_list > div.my_msg > p {
@@ -135,7 +135,7 @@ div.chat_list > div.my_msg > p > span {
 form.message_form {
   display: flex;
   position: relative;
-  padding: 0.8rem 1rem 1.2rem;
+  padding: 0.6rem 1rem 1.2rem;
   flex-direction: column;
   box-shadow: 0 4px 4px 6px var(--secondary-bg-color);
 }
@@ -203,45 +203,35 @@ form.message_form > span.scrolldown_button.active {
   visibility: visible;
 }
 
-form.message_form > span.guess_button {
+form.message_form > div.control_container {
   display: flex;
-  position: absolute;
-  top: -3.2rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  color: var(--primary-color);
-  font-size: 1.2rem;
-  background-color: var(--primary-bg-color);
-  cursor: pointer;
-  border-radius: 1.25rem;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
-  justify-content: center;
+  user-select: none;
+  justify-content: space-between;
   align-items: center;
 }
 
-[data-theme="dark"] form.message_form > span.guess_button {
-  border: 1.5px solid var(--border-color);
-}
-
-form.message_form > span.guess_button.active {
-  opacity: 1;
-  visibility: visible;
-}
-
-form.message_form > div.time_control {
-  user-select: none;
-  text-align: end;
-}
-
-form.message_form > div.time_control > span {
+form.message_form > div.control_container > span.guess_button {
   padding: 0.3rem 0.5rem;
   color: var(--info-color);
   font-size: 0.8rem;
   cursor: pointer;
   border-radius: 10px;
   background-color: var(--secondary-bg-color);
+}
+
+form.message_form > div.control_container > div.time_controls > span {
+  padding: 0.3rem 0.5rem;
+  color: var(--info-color);
+  font-size: 0.8rem;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: var(--secondary-bg-color);
+}
+
+form.message_form
+  > div.control_container
+  > div.time_controls
+  > span:first-child {
   margin-right: 0.5rem;
 }
 
@@ -258,7 +248,7 @@ form.message_form > div.input_container > input {
   color: var(--primary-text-color);
   font-size: 16px;
   flex: 1 1 0%;
-  border-radius: 25px;
+  border-radius: 1.8rem;
   background-color: var(--secondary-bg-color);
   caret-color: var(--primary-text-color);
 }
