--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -18,14 +18,15 @@ block content
                 span
                     i.fa-solid.fa-angle-down   
             span.scrolldown_button.box-shadow
-                i.fa-solid.fa-arrow-down   
-            span.guess_button.box-shadow.active
-                i.fa-solid.fa-pen-to-square
-            div.time_control
-                span.extend_button 
-                    i.fa-solid.fa-plus  시간 연장
-                span.shorten_button 
-                    i.fa-solid.fa-minus  시간 단축
+                i.fa-solid.fa-arrow-down               
+            div.control_container
+                span.guess_button
+                    i.fa-solid.fa-pen-to-square  금칙어 맞추기
+                div.time_controls
+                    span.extend_button 
+                        i.fa-solid.fa-plus  시간 연장
+                    span.shorten_button 
+                        i.fa-solid.fa-minus  시간 단축
             div.input_container                                
                 input(type="text", placeholder="메시지를 입력해주세요.", maxLength=150)
                 button
