[UPDATE] 금칙어 맞추기 기회 표시 방식 변경
- 통일성을 위해 시간 변경 기회 표시방식과 마찬가지로 금칙어 맞추기 기회 표시 또한 금칙어 맞추기 시도 시 유저에게 전송되는 메시지에 포함되도록 수정 (참고 커밋: f3c29db4d29e34dcdcf960c7c7a4c1971dbfbf9f)

- 금칙어 맞추기 모달창에서 금칙어 맞추기 기회 표시가 사라짐에 따라 모달창 스타일 변경

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -354,6 +354,7 @@ dialog.guess_modal > div.modal_container > form.guess_form {
   width: 100%;
   flex-direction: column;
   margin-top: 0.2rem;
+  gap: 0.8rem;
 }
 
 dialog.guess_modal > div.modal_container > form.guess_form > input {
