[UPDATE] 금칙어 맞추기 입력창 필수로 입력되도록 설정
- 사용자가 실수로 아무것도 입력하지 않은 상태에서 금칙어를 제출하는 경우를 대비하여 input 요소에 required=true 속성 추가

--- a/src/views/partials/guessModal.pug
+++ b/src/views/partials/guessModal.pug
@@ -2,7 +2,7 @@ dialog.guess_modal
     div.modal_container 
         h3 🤔 당신의 금칙어는?
         form.guess_form
-            input(type="text", placeholder="금칙어를 입력해주세요.", maxLength="12")
+            input(type="text", placeholder="금칙어를 입력해주세요.", maxLength="12", required=true)
             div.button_container
                 button(type="button").modal_exitBtn 닫기
                 button.modal_submitBtn 확인 
