[FIX] CSP 관련 콘솔 오류 메시지 해결
- helmet의 CSP 설정에서 원인이 돠는 스크립트의 해시만 허용하는 것으로 해결

[오류 메시지]
- Refused to execute inline script because it violates the following Content Security Policy directive: "script-src 'self'". Either the 'unsafe-inline' keyword, a hash ('sha256-5+YTmTcBwCYdJ8Jetbr6kyjGp0Ry/H7ptpoun6CrSwQ='), or a nonce ('nonce-...') is required to enable inline execution.

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -7,6 +7,7 @@ div#main_container {
   user-select: none;
 }
 
+/* 헤더 */
 header.main_header {
   display: flex;
   justify-content: space-between;
@@ -31,6 +32,7 @@ header.main_header > span {
   cursor: pointer;
 }
 
+/* 메인 */
 div.main_body {
   display: flex;
   flex-direction: column;
@@ -73,6 +75,7 @@ div.main_body > a:hover {
   filter: brightness(1.05);
 }
 
+/* 푸터 */
 footer.main_footer {
   display: flex;
   font-weight: 500;
@@ -81,6 +84,7 @@ footer.main_footer {
   align-items: start;
 }
 
+/* 게임 방법 모달창 */
 dialog.tip_modal {
   width: 34rem;
   height: 75%;
