[UPDATE] main 브랜치 업데이트 내용 적용 (#3)
* [UPDATE] 메인 페이지 디자인 변경

- 메인 페이지 이미지 변경
- 게임 방법 버튼을 아이콘 버튼에서 '게임 방법' 텍스트 버튼으로 변경
- 다크모드 버튼과 게임 방법 버튼 위치 변경
- 모바일 환경 가로모드 대비하여 전체 레이아웃에 최소 높이 설정

* [UPDATE] 크롬 브라우저 자동 번역 기능 방지

- 크롬 브라우저 접속 시 나타나는 자동 번역 팝업이 나타나지 않게 하기 위해서 meta 태그 추가

* [UPDATE] 시간 변경 기회 표시 방식 변경

- 기존의 표시 방식은 시간 변경 버튼들과 동떨어져 있다보니 시간 변경 기능과 관련짓기 힘든 점이 있었음

- 좀 더 직관적이게끔 메시지 입력창 좌상단에 표시하는 대신 시간 변경 시 나에게 나타나는 메시지에 함께 표시되는 방식으로 변경

- 기존 자리에는 금칙어 맞추기 버튼이 들어갈 예정

* [UPDATE] 금칙어 맞추기 버튼 위치 이동

-기존의 금칙어 맞추기 버튼의 위치는 채팅창을 가리는 문제가 있었음. 이를 해소하고자 채팅창 최하단에 padding을 주는 방법을 사용했지만 심미적으로 보기 좋지 않았음
- 시간 변경 기회 표시의 위치가 변경됨에 따라 해당 위치에 금칙어 맞추기 버튼을 이동

* [FIX] 금칙어 맞추기 모달창 닫았다가 다시 열 시 submit 이벤트가 중복 발생하는 현상 해결

- 금칙어 맞추기 모달창을 닫았다가 다시 열어서 금칙어를 입력할 시 submit 이벤트 리스너가 중복 호출되는 현상이 발생(최초에 모달창을 열었을 때는 해당 현상 발생 x)
- 금칙어 맞추기 모달창의 닫기 버튼을 클릭했을 때, guessForm의 submit 이벤트 리스너를 제거하는 것으로 해결

* [UPDATE] 금칙어 맞추기 기회 표시 방식 변경

- 통일성을 위해 시간 변경 기회 표시방식과 마찬가지로 금칙어 맞추기 기회 표시 또한 금칙어 맞추기 시도 시 유저에게 전송되는 메시지에 포함되도록 수정 (참고 커밋: f3c29db4d29e34dcdcf960c7c7a4c1971dbfbf9f)

- 금칙어 맞추기 모달창에서 금칙어 맞추기 기회 표시가 사라짐에 따라 모달창 스타일 변경

* [UPDATE] 금칙어 맞추기 입력창 필수로 입력되도록 설정

- 사용자가 실수로 아무것도 입력하지 않은 상태에서 금칙어를 제출하는 경우를 대비하여 input 요소에 required=true 속성 추가

* [UPDATE] 중복 접속 검사 로직 변경

[기존 방식]
- 쿠키에 소켓 아이디를 저장한 다음, 소켓 아이디의 유무에 따라 유저의 중복 접속 검사 여부 검사

[변경된 방식]
- 유저가 room 페이지에 접속한 브라우저 탭의 개수를 로컬 스토리지에 저장한 다음, 탭의 개수에 따라 중복 접속 여부 검사

[기존 방식의 문제점]
- 중복 접속한 두번째 이상의 탭에서 뒤로 가기 버튼을 누른 후 다시 접속했을 때, 그대로 접속이 되는 문제
- 쿠키를 이용하기 때문에 브라우저 탭들 간의 데이터가 실시간으로 동기화되지 않음

=> 현재로서는 비회원 환경에서의 중복 검사만 판별하면 되기 때문에, 해당 로직을 클라이언트 측에서 처리하도록 결정

* [FIX] CSP 관련 콘솔 오류 메시지 해결

- helmet의 CSP 설정에서 원인이 돠는 스크립트의 해시만 허용하는 것으로 해결

[오류 메시지]
- Refused to execute inline script because it violates the following Content Security Policy directive: "script-src 'self'". Either the 'unsafe-inline' keyword, a hash ('sha256-5+YTmTcBwCYdJ8Jetbr6kyjGp0Ry/H7ptpoun6CrSwQ='), or a nonce ('nonce-...') is required to enable inline execution.

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -7,6 +7,7 @@ div#room_container {
   overflow: hidden;
 }
 
+/* 헤더 */
 header.room_header {
   display: flex;
   position: relative;
@@ -48,8 +49,9 @@ header.room_header > span.timer {
   transform: translateY(-50%);
 }
 
+/* 채팅 창 */
 div.chat_list {
-  padding: 0 1.5rem 3.8rem 1.5rem;
+  padding: 0 1.5rem 1.5rem 1.5rem;
   flex: 1 1 0%;
   overflow-y: scroll;
   -ms-overflow-style: none; /* IE and Edge */
@@ -66,7 +68,7 @@ p.loading_msg {
   font-weight: 400;
   font-size: 0.9rem;
   text-align: center;
-  margin-top: 0.9rem;
+  margin-top: 0.8rem;
 }
 
 div.chat_list > p.notice > span {
@@ -81,7 +83,7 @@ div.my_msg > p {
 }
 
 div.chat_list > div.other_msg {
-  margin-top: 0.9rem;
+  margin-top: 0.8rem;
 }
 
 div.chat_list > div.other_msg > span {
@@ -103,7 +105,7 @@ div.chat_list > div.other_msg > p > span {
 
 div.chat_list > div.my_msg {
   text-align: end;
-  margin-top: 0.9rem;
+  margin-top: 0.8rem;
 }
 
 div.chat_list > div.my_msg > p {
@@ -132,10 +134,11 @@ div.chat_list > div.my_msg > p > span {
   }
 }
 
+/* 메시지 입력 창 */
 form.message_form {
   display: flex;
   position: relative;
-  padding: 0.8rem 1rem 1.2rem;
+  padding: 0.6rem 1rem 1.2rem;
   flex-direction: column;
   box-shadow: 0 4px 4px 6px var(--secondary-bg-color);
 }
@@ -203,53 +206,35 @@ form.message_form > span.scrolldown_button.active {
   visibility: visible;
 }
 
-form.message_form > span.guess_button {
+form.message_form > div.control_container {
   display: flex;
-  position: absolute;
-  top: -3.2rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  color: var(--primary-color);
-  font-size: 1.2rem;
-  background-color: var(--primary-bg-color);
-  cursor: pointer;
-  border-radius: 1.25rem;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
-  justify-content: center;
-  align-items: center;
-}
-
-[data-theme="dark"] form.message_form > span.guess_button {
-  border: 1.5px solid var(--border-color);
-}
-
-form.message_form > span.guess_button.active {
-  opacity: 1;
-  visibility: visible;
-}
-
-form.message_form > div.time_control {
-  display: flex;
+  user-select: none;
   justify-content: space-between;
   align-items: center;
-  user-select: none;
 }
 
-form.message_form > div.time_control > p {
-  font-weight: 500;
-  font-size: 0.8rem;
-  margin-left: 0.5rem;
-}
-
-form.message_form > div.time_control > div > span {
+form.message_form > div.control_container > span.guess_button {
   padding: 0.3rem 0.5rem;
   color: var(--info-color);
   font-size: 0.8rem;
   cursor: pointer;
   border-radius: 10px;
   background-color: var(--secondary-bg-color);
+}
+
+form.message_form > div.control_container > div.time_controls > span {
+  padding: 0.3rem 0.5rem;
+  color: var(--info-color);
+  font-size: 0.8rem;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: var(--secondary-bg-color);
+}
+
+form.message_form
+  > div.control_container
+  > div.time_controls
+  > span:first-child {
   margin-right: 0.5rem;
 }
 
@@ -266,7 +251,7 @@ form.message_form > div.input_container > input {
   color: var(--primary-text-color);
   font-size: 16px;
   flex: 1 1 0%;
-  border-radius: 25px;
+  border-radius: 1.8rem;
   background-color: var(--secondary-bg-color);
   caret-color: var(--primary-text-color);
 }
@@ -286,6 +271,7 @@ form.message_form > div.input_container > button {
   border-radius: 50%;
 }
 
+/* 모달 창 */
 dialog {
   top: 50%;
   left: 50%;
@@ -372,6 +358,7 @@ dialog.guess_modal > div.modal_container > form.guess_form {
   width: 100%;
   flex-direction: column;
   margin-top: 0.2rem;
+  gap: 0.8rem;
 }
 
 dialog.guess_modal > div.modal_container > form.guess_form > input {
