--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,21 +1,17 @@
 div#main_container {
   display: flex;
-  padding: 1rem;
+  padding: 0.8rem 1.5rem;
   flex: 1 1 0%;
   flex-direction: column;
   justify-content: space-between;
   user-select: none;
 }
 
+/* 헤더 */
 header.main_header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-header.main_header > span {
-  font-size: 1.2rem;
-  cursor: pointer;
 }
 
 header.main_header > div.darkmode_button > input {
@@ -31,34 +27,39 @@ header.main_header > div.darkmode_button > label > i.inactive {
   display: none;
 }
 
+header.main_header > span {
+  font-size: 0.8rem;
+  cursor: pointer;
+}
+
+/* 메인 */
 div.main_body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2.5rem;
-  margin-top: 1rem;
+  gap: 3rem;
 }
 
 div.main_body > div.title_container {
-  text-align: center;
+  width: 100%;
+  text-align: start;
 }
 
 div.main_body > div.title_container > h2 {
   color: var(--primary-color);
-  font-weight: 600;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 div.main_body > div.title_container > h1 {
-  font-size: 2.4rem;
+  font-size: 2.6rem;
 }
 
 div.main_body > img {
-  width: 30%;
+  width: 85%;
 }
 
 div.main_body > a {
-  width: 85%;
+  width: 100%;
   padding: 0.9rem 0;
   color: var(--secondary-text-color);
   font-weight: 600;
@@ -66,8 +67,7 @@ div.main_body > a {
   text-decoration: none;
   text-align: center;
   background-color: var(--primary-color);
-  border-radius: 2.5rem;
-  margin-top: 4rem;
+  border-radius: 1rem;
   transition: filter 0.1s ease;
 }
 
@@ -75,12 +75,16 @@ div.main_body > a:hover {
   filter: brightness(1.05);
 }
 
+/* 푸터 */
 footer.main_footer {
+  display: flex;
   font-weight: 500;
-  font-size: 0.8rem;
-  text-align: center;
+  font-size: 0.7rem;
+  flex-direction: column;
+  align-items: start;
 }
 
+/* 게임 방법 모달창 */
 dialog.tip_modal {
   width: 34rem;
   height: 75%;
