--- a/src/views/partials/guessModal.pug
+++ b/src/views/partials/guessModal.pug
@@ -1,10 +1,8 @@
 dialog.guess_modal 
     div.modal_container 
-        h3 당신의 금칙어는?
+        h3 🤔 당신의 금칙어는?
         form.guess_form
-            input(type="text", placeholder="금칙어를 입력해주세요.", maxLength="12")
-            p 남은 기회: 
-                span.guess_chances 3
+            input(type="text", placeholder="금칙어를 입력해주세요.", maxLength="12", required=true)
             div.button_container
                 button(type="button").modal_exitBtn 닫기
                 button.modal_submitBtn 확인 
