[FIX] 일부 디바이스에서 화면이 잘려서 나오는 문제 해결
- 레이아웃에 설정되어 있는 min-height 값보다 디바이스 화면의 높이가 더 작아서 발생하는 문제였음(문제가 발생한 기기: 아이폰 xs)

- min-height 속성을 제거하고, #main_contianer에 'overflow-y: scroll' 속성을 설정함으로써 모바일 환경 가로모드에서 발생하는 레이아웃 일그러짐 문제 해결

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -5,6 +5,14 @@ div#main_container {
   flex-direction: column;
   justify-content: space-between;
   user-select: none;
+  overflow-y: scroll;
+  gap: 2rem;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+div#main_container::-webkit-scrollbar {
+  display: none;
 }
 
 /* 헤더 */
