--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -66,6 +66,26 @@ div.main_body > img {
   width: 85%;
 }
 
+div.main_body > button.google_login {
+  display: flex;
+  width: 100%;
+  padding: 0.8rem;
+  border: none;
+  border: 1px solid #d6d6d6;
+  color: #0000008a;
+  background-color: #fff;
+  align-items: center;
+  justify-content: space-between;
+  outline: none;
+  border-radius: 0.8rem;
+  cursor: pointer;
+}
+
+div.main_body > button.google_login > p {
+  font-size: 1rem;
+  flex: 1;
+}
+
 div.main_body > a {
   width: 100%;
   padding: 0.9rem 0;
