--- a/src/views/partials/googleLogin.pug
+++ b/src/views/partials/googleLogin.pug
@@ -1,3 +1,3 @@
-button.google_login
+button.social_login.google_login
     img(src="images/google_logo.png", width="32", alt="Google")
     p 구글 아이디로 로그인
