[UPDATE] 매칭 시작 버튼 클릭 시 방 참여하도록 수정
- room 페이지에서 새로고침 버튼을 빠르게 연타했을 때, 가끔 자신이 생성한 방에 자신이 참여하게 되는 현상이 발생함. 새로고침이 짧은 시간 안에 빈번하게 일어날 경우 소켓 연결이 제대로 해제되지 않는 것으로 보임

- room 페이지에 있는 소켓 관련 로직의 안정성을 위해서 기존 room 페이지에 접속하면 자동으로 소켓이 연결되는 방식에서 매칭 시작 버튼을 클릭했을 때 소켓이 연결되는 방식으로 변경

--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -80,6 +80,7 @@ div.chat_list > div.matchButton_container > button.match_button {
   padding: 0.5rem 1rem;
   border: none;
   color: var(--secondary-text-color);
+  font-weight: 500;
   background-color: var(--primary-color);
   border-radius: 0.3rem;
   cursor: pointer;
@@ -96,6 +97,7 @@ p.loading_msg {
   font-weight: 400;
   font-size: 0.9rem;
   text-align: center;
+  white-space: pre-line;
   margin-top: 0.8rem;
 }
 
