--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -10,10 +10,10 @@ block content
                 span.forbidden_word
             span.timer 5:00
         div.chat_list
-            //div.matchButton_container 
+            div.matchButton_container 
                 p.match_desc 게임을 시작하려면 매칭 시작 버튼을 눌러주세요.
                 button.match_button.box-shadow 매칭 시작    
-            p.loading_msg 상대방을 기다리는 중입니다...                   
+            //p.loading_msg 상대방을 기다리는 중입니다...                   
         form.message_form     
             div.message_preview
                 label 상대
