--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,6 +1,6 @@
 div#main_container {
   display: flex;
-  padding: 0.8rem 1.5rem;
+  padding: 0.7rem 1rem;
   flex: 1 1 0%;
   flex-direction: column;
   justify-content: space-between;
@@ -45,7 +45,8 @@ div.main_body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3rem;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 div.main_body > div.title_container {
@@ -55,15 +56,15 @@ div.main_body > div.title_container {
 
 div.main_body > div.title_container > h2 {
   color: var(--primary-color);
-  font-size: 1.4rem;
+  font-size: 1.5rem;
 }
 
 div.main_body > div.title_container > h1 {
-  font-size: 2.6rem;
+  font-size: 2.25rem;
 }
 
 div.main_body > img {
-  width: 85%;
+  width: 95%;
 }
 
 div.main_body > button.social_login {
@@ -96,15 +97,16 @@ div.main_body > button.social_login > p {
 
 div.main_body > a {
   width: 100%;
-  padding: 0.9rem 0;
+  padding: 0.7rem 0;
   color: var(--secondary-text-color);
   font-weight: 600;
   font-size: 1.1rem;
   text-decoration: none;
   text-align: center;
   background-color: var(--primary-color);
-  border-radius: 1rem;
+  border-radius: 12px;
   transition: filter 0.3s ease;
+  margin-top: 1.5rem;
 }
 
 div.main_body > a:hover {
